# battletowerz

./: .clang-format  CMakeLists.txt  editor.cfg  todo.md
.noz/: user.cfg
assets/animations/: archer_attack.anim  archer_draw.anim  archer_fire.anim  archer_idle.anim  archer_kill.anim  archer_reload.anim  archer_shuffle.anim  cowboy_death.anim  cowboy_idle.anim  cowboy_run.anim  cowboy_shoot.anim  human_idle.anim  stick_bow_draw.anim  stick_dead.anim  stick_death.anim  stick_idle.anim  stick_run.anim  unit_knight_attack.anim  unit_knight_idle.anim  unit_knight_run.anim
assets/meshes/: archer_arm_l.mesh  archer_arm_r.mesh  archer_body.mesh  archer_head.mesh  archer_head_hood.mesh  archer_quiver.mesh  bullet.mesh  bullet_casing.mesh  cowboy_arm_l.mesh  cowboy_arm_r.mesh  cowboy_body.mesh  cowboy_head.mesh  cowboy_icon.mesh  cowboy_mustache.mesh  cowboy_pistol.mesh  cowboy_spur_b.mesh  cowboy_tie.mesh  human_body.mesh  human_eye.mesh  human_eye_dead.mesh  human_foot_l.mesh  human_foot_r.mesh  human_hand.mesh  human_hand_l.mesh  human_hand_r.mesh  human_head.mesh  human_leg_l.mesh  human_leg_r.mesh  icon_fight.mesh  icon_state_attack.mesh  icon_state_move.mesh  icon_state_reload.mesh  projectile_arrow.mesh  stick_arm_l_l.mesh  stick_arm_l_r.mesh  stick_arm_u_l.mesh  stick_arm_u_r.mesh  stick_body.mesh  stick_body_b.mesh  (+26 more)
src/: battle.cpp  editor.cpp  entity.cpp  entity.h  game.cpp  game.h  game_Assets.h  game_assets.cpp  game_assets.h  game_assets2.h  main.cpp  menu.cpp  pch.h  projectile.cpp  projectile.h  rvo.cpp  rvo.h  unit.cpp  unit.h  unit_database.cpp  world.cpp
(+18 files in other folders)
